--- a/css/js-image-slider.css
+++ b/css/js-image-slider.css
@@ -94,3 +94,7 @@
 
 #slider>a, #slider video, #slider audio {display:none;}
 #slider div {-webkit-transform: translate3d(0,0,0);transform: translate3d(0,0,0);}
+
+#sliderImage {
+    background-size: cover;
+}
